--- a/交易平台/交易平台/交易平台.vcxproj
+++ b/交易平台/交易平台/交易平台.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{bdb72067-726e-4da0-90c1-a32511e29c72}</ProjectGuid>
     <RootNamespace>交易平台</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>商品竞拍平台</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
