--- a/交易平台/交易平台/交易平台.vcxproj
+++ b/交易平台/交易平台/交易平台.vcxproj
@@ -128,7 +128,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="源.cpp" />
+    <ClCompile Include="Commodity Auction Platform.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Commodity Auction Platform.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
